tests/ui/lifetimes/tail-expr-in-nested-expr.stderr
error[E0716]: temporary value dropped while borrowed
  --> $DIR/tail-expr-in-nested-expr.rs:4:15
   |
LL |     let _ = { String::new().as_str() }.len();
   |               ^^^^^^^^^^^^^        -   --- borrow later used by call
   |               |                    |
   |               |                    temporary value is freed at the end of this statement
   |               creates a temporary value which is freed while still in use
   |
   = note: consider using a `let` binding to create a longer lived value

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0716`.
